fix:make navigation bar responsive on mobile

--- a/style.css
+++ b/style.css
@@ -8,8 +8,10 @@ body{
 h1{
     color:#76c7c0;
 }
+@media(max-width:680px){
 nav{
     display:flex;
+    flex-direction: column;
     justify-content:space-between;
     align-items:center;
     padding: 10px 20px;
@@ -17,10 +19,15 @@ nav{
 }
 nav ul{
     display:flex;
+    flex-direction:column;
+    align-items: center;
     list-style-type:none;
+    margin-top:10px;
 }
 nav ul li {
-margin-left:20px;
+    margin-left:0px;
+    margin-top:15px;
+}
 }
 nav a {
     text-decoration: none;
